<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />
    <android.support.v4.widget.DrawerLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

           <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:id="@+id/layout"
                android:background="@color/back">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/main_activity_head"
                    android:id="@+id/main_activity_head">

                </ImageView>

               <ScrollView
                   android:layout_height="match_parent"
                   android:layout_width="match_parent"
                   android:layout_below="@+id/main_activity_head">

                <RelativeLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:paddingBottom="20dp"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin">

               <!-- <com.example.jatin.wi_bird.MyCustomTextView
                    style="@style/MyTextStyle"
                    android:id="@+id/main_content"
                    android:text="@string/main_activity_content"/>-->


                <com.example.jatin.wi_bird.MyCustomTextView
                    style="@style/MyHeadTextStyle"
                    android:id="@+id/specification_heading"
                    android:textSize="20sp"
                    android:text="SPECIFICATIONS:"/>

                <com.example.jatin.wi_bird.MyCustomTextView
                    style="@style/MyHeadTextStyle"
                    android:id="@+id/micro_heading"
                    android:layout_below="@id/specification_heading"
                    android:text="Microcontroller:"/>
                <com.example.jatin.wi_bird.MyCustomTextView
                    style="@style/MyTextStyle"
                    android:id="@+id/micro_heading_content"
                    android:layout_below="@id/micro_heading"
                    android:text="@string/micro_content"
                    />
                <com.example.jatin.wi_bird.MyCustomTextView
                    style="@style/MyHeadTextStyle"
                    android:id="@+id/sensors_heading"
                    android:layout_below="@id/micro_heading_content"
                    android:text="Sensors:"/>
                <com.example.jatin.wi_bird.MyCustomTextView
                    style="@style/MyTextStyle"
                    android:id="@+id/sensors_heading_content"
                    android:layout_below="@id/sensors_heading"
                    android:text="@string/sensor_content"
                    />
                <com.example.jatin.wi_bird.MyCustomTextView
                    style="@style/MyHeadTextStyle"
                    android:id="@+id/indicators_heading"
                    android:layout_below="@id/sensors_heading_content"
                    android:text="Indicators:"/>
                <com.example.jatin.wi_bird.MyCustomTextView
                    style="@style/MyTextStyle"
                    android:id="@+id/indicators_heading_content"
                    android:layout_below="@id/indicators_heading"
                    android:text="@string/indicator_content" />
                <com.example.jatin.wi_bird.MyCustomTextView
                    style="@style/MyHeadTextStyle"
                    android:id="@+id/control_heading"
                    android:layout_below="@id/indicators_heading_content"
                    android:text="Control:"/>
                <com.example.jatin.wi_bird.MyCustomTextView
                    style="@style/MyTextStyle"
                    android:id="@+id/control_heading_content"
                    android:layout_below="@id/control_heading"
                    android:text="@string/control_content" />
                <com.example.jatin.wi_bird.MyCustomTextView
                    style="@style/MyHeadTextStyle"
                    android:id="@+id/comm_heading"
                    android:layout_below="@id/control_heading_content"
                    android:text="Communication:"/>
                <com.example.jatin.wi_bird.MyCustomTextView
                    style="@style/MyTextStyle"
                    android:id="@+id/comm_heading_content"
                    android:layout_below="@id/comm_heading"
                    android:text="@string/comm_content" />
                <com.example.jatin.wi_bird.MyCustomTextView
                    style="@style/MyHeadTextStyle"
                    android:id="@+id/dimension_heading"
                    android:layout_below="@id/comm_heading_content"
                    android:text="Dimensions:"/>
                <com.example.jatin.wi_bird.MyCustomTextView
                    style="@style/MyTextStyle"
                    android:id="@+id/dimension_heading_content"
                    android:layout_below="@id/dimension_heading"
                    android:text="@string/dimension_content" />

                <com.example.jatin.wi_bird.MyCustomTextView
                    style="@style/MyHeadTextStyle"
                    android:id="@+id/power_heading"
                    android:layout_below="@id/dimension_heading_content"
                    android:text="Power:"/>
                <com.example.jatin.wi_bird.MyCustomTextView
                    style="@style/MyTextStyle"
                    android:id="@+id/power_heading_content"
                    android:layout_below="@id/power_heading"
                    android:text="@string/power_content" />
                <com.example.jatin.wi_bird.MyCustomTextView
                    style="@style/MyHeadTextStyle"
                    android:id="@+id/battery_heading"
                    android:layout_below="@id/power_heading_content"
                    android:text="Battery Life:"/>
                <com.example.jatin.wi_bird.MyCustomTextView
                    style="@style/MyTextStyle"
                    android:id="@+id/battery_heading_content"
                    android:layout_below="@id/battery_heading"
                    android:text="@string/battery_content" />
                <com.example.jatin.wi_bird.MyCustomTextView
                    style="@style/MyHeadTextStyle"
                    android:id="@+id/locomotion_heading"
                    android:layout_below="@id/battery_heading_content"
                    android:text="Locomotion:"/>
                <com.example.jatin.wi_bird.MyCustomTextView
                    style="@style/MyTextStyle"
                    android:id="@+id/locomotion_heading_content"
                    android:layout_below="@id/locomotion_heading"
                    android:text="@string/locomotion_content" />
                </RelativeLayout>
               </ScrollView>

            </LinearLayout>


        <fragment
            android:id="@+id/fragment_navigation_drawer"
            android:layout_width="@dimen/nav_drawer_width"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:name="com.example.jatin.wi_bird.NavigationDrawerFragment"
            app:layout="@layout/fragment_navigation_drawer"
            tools:layout="@layout/fragment_navigation_drawer" />
    </android.support.v4.widget.DrawerLayout>

</LinearLayout>